fixing spacing.. you're welcome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,34 @@
-
 body {
-	background: url("../images/pineapplecut.png");
-	font-size: 30px;
-	font-family: Avenir;
-	font-weight: bold;
+  background: url("../images/pineapplecut.png");
+  font-size: 30px;
+  font-family: Avenir;
+  font-weight: bold;
 }
-
 .logo {
-	float: left;
-	position: relative;
-	margin-left: 70px;
-	margin-right: 100px;
-	width: 600px;
+  float: left;
+  position: relative;
+  margin: 120px 100px 0px 70px;
+  width: 600px;
 }
-
 .score {
-	position: absolute;
-	margin: 250px 0px 0px 310px;
+  position: absolute;
+  margin: 190px 0px 0px 310px;
 }
-
 .gamePlay {
-	width: 504px;
-	height: 390px;
-	float: left;
-	background-color: #aaa;
-	padding: 70px;
-	margin: 50px;
-	border: 4px dotted #B92626;
-	text-align: center;
-	color:white;
+  width: 504px;
+  height: 390px;
+  float: left;
+  background-color: #aaa;
+  padding: 70px;
+  margin: 50px;
+  border: 4px dotted #B92626;
+  text-align: center;
+  color: white;
 }
-
 h2 {
-	margin: 50px 0px 30px 0px;
-	font-weight: normal;
+  margin: 50px 0px 30px 0px;
+  font-weight: normal;
 }
-
 #guessed {
-	margin-bottom: 30px;
+  margin-bottom: 30px;
 }
